fixed layout on mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Øyvind Løvskeid Taranrød">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Øyvind Løvskeid Taranrød</title>
 	<link rel="stylesheet" href="style.css" >
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2:200,400">
@@ -23,7 +24,7 @@
 			<p>Jeg er 26 år, bor i Oslo. Har studert informatikk i 2 år ved UiO.</p>
 			<p>Jeg har alltid hatt en brennende interesse for datamaskiner og teknologi, så programmering er noe jeg trives veldig godt med.
 				På fritiden lager jeg musikk, gamer, skater og trener. Jeg har alltid vært fascinert av universet og er veldig glad i å lese om astronomi, fysikk og alt det der.</p>
-			<p>Jeg er godt kjent med å programmere i Python, Java og (litt) C. Jeg er kjent med Git, bash (linux shell), og SQL. Har brukt disse teknologiene masse ila. studiene. Ta gjerne en titt på min github eller linkedin-profil.</p>
+			<p>Jeg er godt kjent med å programmere i Python, Java og (litt) C. Jeg er kjent med Git, bash (på linux), og SQL. Har brukt disse teknologiene masse ila. studiene. Ta gjerne en titt på min github eller linkedin-profil.</p>
 
 		</div>
 
