--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Øyvind Løvskeid Taranrød">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"">
 	<title>Øyvind Løvskeid Taranrød</title>
 	<link rel="stylesheet" href="style.css" >
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2:200,400">
