--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
 					<p>Hvis du er litt nørd 🤓 så kan du sjekke ut <a href="https://github.com/eywin">Github'en min</a>
 					</p>
 				</div>
+
+
+				<div class="bubble right">
+					<p>Ok, takk... I guess..</p>
+					<p>Men si jeg er en normal person... Du har ikke en instagram eller noe da? </p>
+				</div>
+
+				<div class="bubble">
+					<p>hehe, joda</p>
+					<p>Du kan finne meg på <a href="https://www.instagram.com/_oyvind/">insta her</a></p>
+				</div>
+
+				<div class="bubble">
+					<p>Skulle kanskje starta med det... 😅😅</p>
+				</div>
+				<div class="bubble right">
+					<p>Nice, takk</p>
+				</div>
+				<div class="bubble">
+					<p>Jeg har også en <a href="https://soundcloud.com/lucidsmash">SoundCloud</a> 🎶 hvis du er
+						interessert 🤔🤔</p>
+				</div>
+
+				<div class="bubble right">
+					<p>Må stikke jeg...</p>
+				</div>
+
+
+
+
+
 			</div>
 		</div>
 		<!-- <div class="footer">
